[package]
name = "influxql-logical-planner"
version = "0.1.0"
edition = "2021"
authors = ["CeresDB Authors <ceresdbservice@gmail.com>"]

[dependencies]
arrow = { version = "32.0.0", features = ["prettyprint"] }
chrono = { version = "0.4", default-features = false }
chrono-tz = { version = "0.8" }
datafusion = "18.0.0"
influxql-parser = { git = "https://github.com/Rachelint/influxql-parser.git", rev = "6fd5d946843682c3559e1c172cf23a14d61495b9" }
itertools = "0.10.5"
once_cell = "1"
regex = "1"
lazy_static = "1.4.0"
regex-syntax = "0.6.28"

[dev-dependencies]
assert_matches = "1"
insta = { version = "1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "influxql_logical_planner"
